# adm_projects

./: .gitignore  .gitmodules  CMakeLists.txt  buildrun_fw_sandbox.sh  clean.sh  premake5.lua
adm_framework/: CMakeLists.txt  app.c  app.h  dbgtext.c  dbgtext.h  gmath.h  gpu.c  gpu.h  image.c  image.h  input.c  input.h  linmath.h  nuklear_adm.h  sprite_batch.c  sprite_batch.h  time.c  time.h  types.h
adm_framework/sandbox/: main.c
adm_test/: adm_test.lua
adm_utils/: adm_utils.make  adm_utils_sandbox.make  arena.c  arena.h  console.h  format.c  format.h  iter.c  iter.h  list_impl.h  panic.c  panic.h  premake5.lua  string.c  util.h  vec_impl.h
adm_utils/tests/: test_iter.c  test_list.c  test_map.c  test_string.c
src/adm_framework/: CMakeLists.txt  app.c  app.h  color.h  gpu.c  gpu.h  image.c  image.h  input.c  input.h  time.c  time.h
src/adm_framework/sandbox/: main.c
src/adm_utils/: CMakeLists.txt  arena.c  arena.h  console.c  console.h  format.c  format.h  hash.c  hash.h  iter.c  iter.h  list_impl.h  map_impl.h  panic.c  panic.h  stream.c  stream.h  string.c  string.h  util.h  vec_impl.h
src/adm_utils/sandbox/: main.c
src/adm_utils/tests/: test_arena.c  test_format.c  test_main.c  test_test.c  test_vector.c
src/adm_utils/tests/framework/: test.c  test.h
